# Palworld-RESTAPI

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CLI_GUIDE.md  ENDPOINTS.md  USAGE_GUIDE.md
examples/: announcement.py  banplayer.py  kickplayer.py  playerlist.py  serverinfo.py  shutdown.py  sync_serverinfo.py  unbanplayer.py
src/palworld_restapi/: __init__.py  _core.py  async_client.py  cli.py  client.py  errors.py  models.py  py.typed
tests/: test_async_client.py  test_client.py  test_palworld_cli.py
