[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palworld-restapi"
version = "1.0.0"
description = "This is a simple Palworld REST API Wrapper + CLI written in python."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Palworld-RESTAPI" }
]
dependencies = [
    "httpx>=0.27,<1",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/Palworld-RESTAPI/Palworld-RESTAPI"
Issues = "https://github.com/Palworld-RESTAPI/Palworld-RESTAPI/issues"

[project.scripts]
palworld-cli = "palworld_restapi.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff>=0.15.18",
]

[tool.hatch.build.targets.wheel]
packages = ["src/palworld_restapi"]
